--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,25 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Get Chalet
-        uses: dimitre/get-chalet@v2
+      - name: Cache Chalet
+        id: cache-chalet
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-chalet
+        with:
+          path: **
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.cpp') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+
+      - if: ${{ steps.cache-chalet.outputs.cache-hit != 'true' }}
+        - name: Get Chalet
+          uses: dimitre/get-chalet@v2
+          
       - name: Is this love?
         shell: bash
         run: |
-          ./chalet/build/**/chalet --version
-          ln -s ./chalet/build/**/chalet .
+          mv chalet chaletbuild
+          ./chaletbuild/build/**/chalet --version
+          ln -s ./chaletbuild/build/**/chalet .
           ./chalet --version
