--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,14 +32,12 @@ jobs:
           path: |
             chalet/**
             chaletbuild/**
-
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.cpp') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
-
       - if: ${{ steps.cache-chalet.outputs.cache-hit != 'true' }}
-        - name: Get Chalet
-          uses: dimitre/get-chalet@v2
+        name: Get Chalet
+        uses: dimitre/get-chalet@v2
 
       - name: Is this love?
         shell: bash
