--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,7 @@ jobs:
         shell: bash
         run: |
           ./chalet --version
-          ./chalet configure -t llvm -a auto
-          ./chalet build
-          ./chalet
+          cd act
+          ../chalet configure -t llvm -a auto
+          ../chalet build
+          ../chalet bundle
