--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,6 @@ jobs:
           pwd
           cd /home/runner/work/act/act
           pwd
-          ../chalet configure -t llvm -a auto
-          ../chalet build
-          ../chalet bundle
+          ./chalet configure -t llvm -a auto
+          ./chalet build
+          ./chalet bundle
