--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,10 +38,20 @@ jobs:
           cache-name: cache-chalet
         with:
           path: |
-            build/**
-            chalet/**
+            # chalet/**
             chaletbuild/**
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.cpp') }}
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('chaletbuild/**/*.cpp') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-
+      - name: Cache Build
+        id: cache-build
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-build
+        with:
+          path: |
+            build/**
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('build/**/*.cpp') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}-
       - if: ${{ steps.cache-chalet.outputs.cache-hit != 'true' }}
